Fixed responsive sizing bugs in svgs and aligned styling

--- a/Home/homemedia.css
+++ b/Home/homemedia.css
@@ -463,8 +463,9 @@
     .h2-line-1,
     .h2-line-2 {
         display: flex;
-        width: fit-content;
-        height: fit-content;
+        min-width: 350px;
+        max-width: 370px;
+        max-height: 60px;
         flex-direction: column;
         justify-content: center;
         text-align: center;
@@ -637,9 +638,11 @@
     }
 
     .row-1-container {
-        gap: 5px;
+        gap: 3px;
         flex-shrink: 0;
         position: relative;
+        margin: 0 auto;
+        justify-content: center;
     }
 
     .figma-container,
@@ -661,8 +664,8 @@
     }
 
     .figma-container {
-        padding: 10px;
-        min-width: 77.47px;
+        padding: 5px;
+        min-width: 74.47px;
         max-width: 100px;
         gap: 20px;
         display: flex;
@@ -680,8 +683,7 @@
 
     .vs-code-container {
         background: var(--white-secondary, #ffffff);
-        padding: 10px;
-        min-width: 77.47px;
+        min-width: 74.47px;
         max-width: 100px;
         gap: 20px;
         display: flex;
@@ -702,7 +704,7 @@
 
     .articulate-container {
         padding: 10px;
-        min-width: 77.47px;
+        min-width: 74.47px;
         max-width: 100px;
         gap: 20px;
         display: flex;
@@ -743,7 +745,7 @@
 
     .creative-cloud-container {
         padding: 10px;
-        min-width: 77.47px;
+        min-width: 74.47px;
         max-width: 100px;
         gap: 20px;
         display: flex;
@@ -779,7 +781,7 @@
 
     .office-container {
         padding: 10px;
-        min-width: 77.47px;
+        min-width: 74.47px;
         max-width: 100px;
         gap: 20px;
         display: flex;
@@ -833,9 +835,11 @@
     }
 
     .row-2-container {
-        gap: 5px;
+        gap: 3px;
         flex-shrink: 0;
         position: relative;
+        margin: 0 auto;
+        justify-content: center;
     }
 
     .html-container {
@@ -861,7 +865,7 @@
         align-items: center;
         justify-content: center;
         max-width: 50px;
-        min-height: 90px;
+        min-height: 100px;
     }
 
     .css-container {
@@ -882,7 +886,7 @@
         align-items: center;
         justify-content: center;
         max-width: 50px;
-        min-height: 90px;
+        min-height: 100px;
     }
 
     .css-logo, .css-logo2 {
@@ -907,7 +911,7 @@
         align-items: center;
         justify-content: center;
         max-width: 50px;
-        min-height: 90px;
+        min-height: 100px;
     }
 
     .java-script-logo, .java-script-logo2 {
@@ -931,7 +935,7 @@
         align-items: center;
         justify-content: center;
         max-width: 50px;
-        min-height: 90px;
+        min-height: 100px;
     }
     .github-logo, .github-logo-container {
         display: none;
@@ -997,7 +1001,7 @@
     .footer {
         width: 100%;
         background: var(--white-primary);
-        padding: 54px 0 10px 0;
+        padding: 54px 0 30px 0;
         display: flex;
         flex-direction: row;
         align-items: center;
@@ -1065,6 +1069,7 @@
     .footer-nav-button a {
         text-decoration: none;
         color: var(--black-primary);
+        font-size: var(--mobilenav-size);
     }
 
     .button-2 {
